# mock-syn

./: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs  syn.rs
derive/: Cargo.toml
derive/src/mock_syn/field/: mod.rs
macros/: Cargo.toml
macros/src/mock_syn/: mod.rs
macros/src/mock_syn/field/: attr.rs
mock-syn-test-common/: Cargo.toml
mock-syn-test-common/src/: lib.rs
src/: lib.rs
src/common/: syn.rs
src/mock_syn/: attr.rs  data.rs  mod.rs  variant.rs
src/mock_syn/field/: attr.rs  mod.rs
src/mock_syn/variant/: attr.rs  mod.rs
tests/: basic.rs  complex.rs
