[package]
name = "mock-syn"
version = "0.1.0"
authors = ["Greg \"GothAck\" Miell <greg@gothack.ninja>"]
license = "MIT"
description = "Mock / wrap syn structs and enums overiding specific fields"
repository = "https://github.com/gothack/mock-syn"
categories = ["development-tools::procedural-macro-helpers"]
edition = "2021"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
