[package]
name = "mock-syn"
version = "0.1.4"
authors = ["Greg \"GothAck\" Miell <greg@gothack.ninja>"]
license = "MIT"
description = "Mock / wrap syn structs and enums overiding specific fields"
repository = "https://github.com/gothack/mock-syn"
categories = ["development-tools::procedural-macro-helpers"]
edition = "2021"

[dependencies]
mock-syn-common = { version = "0.1.4", path = "common" }
mock-syn-macros = { version = "0.1.4", path = "macros" }

[dev-dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["parsing"] }

mock-syn-common = { version = "0.1.4", path = "common", features = ["test"] }

[workspace]
