[package]
name = "mock-syn-derive"
version = "0.1.4"
edition = "2021"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

mock-syn-common = { version = "0.1.4", path = "../common" }

[dev-dependencies]
mock-syn-common = { version = "0.1.4", path = "../common", features = ["test"] }
